# lab08

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml  solver-release.yml
demo/: main.cpp
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
formatter_lib/: CMakeLists.txt  formatter.cpp  formatter.h
solver_application/: CMakeLists.txt  equation.cpp
solver_lib/: CMakeLists.txt  solver.cpp  solver.h
tests/: test1.cpp
